--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         scale="120 120 120"
         gps-entity-place="latitude: 100; longitude: 100;"
       ></a-text>
-      <a-camera gps-camera rotation-reader> </a-camera>
+      <a-camera gps-camera rotation-reader alert=true> </a-camera>
     </a-scene>
   </body>
 </html>
